Proj 3 work, part 1

--- a/project-03/lewis_project_03.Rmd
+++ b/project-03/lewis_project_03.Rmd
@@ -19,6 +19,11 @@ Using the dataset obtained from FSU's [Florida Climate Center](https://climatece
 
 ```{r, message=FALSE, warning=FALSE}
 library(tidyverse)
+library(ggridges)
+library(lubridate)
+
+setwd( "..")
+weather_tpa2016<- read_csv("data/tpa2016.csv")
 weather_tpa <- read_csv("https://raw.githubusercontent.com/reisanar/datasets/master/tpa_weather_2022.csv")
 # random sample 
 sample_n(weather_tpa, 4)
@@ -36,6 +41,43 @@ knitr::include_graphics("https://github.com/reisanar/figs/raw/master/tpa_max_tem
 
 Hint: the option `binwidth = 3` was used with the `geom_histogram()` function.
 
+```{r}
+tpa_clean2016 <- weather_tpa2016 %>% 
+  unite("doy", YEAR, MONTH, DAY, sep = "-") %>% 
+  mutate(doy = ymd(doy), 
+         max_temp = as.double(maxTemp))
+
+tpa_clean2016$month <- factor(month(tpa_clean2016$doy, label=TRUE, abbr=FALSE))
+
+ggplot(tpa_clean2016, aes(x = max_temp, fill = month)) +
+  geom_histogram(binwidth = 3, show.legend = FALSE, color = "white") +
+  facet_wrap(~ month) +
+  labs(x = "Maximum temperatures",
+       y = "Number of Days") +
+  theme_bw(base_size = 15)
+```
+
+
+```{r}
+tpa_clean <- weather_tpa %>% 
+  unite("doy", year, month, day, sep = "-") %>% 
+  mutate(doy = ymd(doy), 
+         max_temp = as.double(max_temp), 
+         min_temp = as.double(min_temp), 
+         precipitation = as.double(precipitation))
+
+tpa_clean$month <- factor(month(tpa_clean$doy, label=TRUE, abbr=FALSE))
+
+ggplot(tpa_clean, aes(x = max_temp, fill = month)) +
+  geom_histogram(binwidth = 3, show.legend = FALSE, color = "white") +
+  facet_wrap(~ month) +
+  labs(x = "Maximum temperatures",
+       y = "Number of Days") +
+  theme_bw(base_size = 15)
+```
+
+
+
 (b) Create a plot like the one below:
 
 ```{r, echo = FALSE, out.width="80%", fig.align='center'}
@@ -43,6 +85,25 @@ knitr::include_graphics("https://github.com/reisanar/figs/raw/master/tpa_max_tem
 ```
 
 Hint: check the `kernel` parameter of the `geom_density()` function, and use `bw = 0.5`.
+
+```{r}
+
+ggplot(tpa_clean2016, aes(x = max_temp)) +
+  geom_density(kernel = "epanechnikov", bw = 0.5, fill = "darkgray", size = 1) +
+  labs(x = "Maximum Temperature",
+       y = "density") +
+  theme_bw(base_size = 15) +
+  theme(panel.border = element_blank())
+```
+```{r}
+ggplot(tpa_clean, aes(x = max_temp)) +
+  geom_density(kernel = "epanechnikov", bw = 0.5, fill = "darkgray", size = 1) +
+  labs(x = "Maximum Temperature",
+       y = "density") +
+  theme_bw(base_size = 15) +
+  theme(panel.border = element_blank())
+```
+
 
 (c) Create a plot like the one below:
 
@@ -52,6 +113,28 @@ knitr::include_graphics("https://github.com/reisanar/figs/raw/master/tpa_max_tem
 
 Hint: default options for `geom_density()` were used. 
 
+```{r}
+ggplot(tpa_clean2016, aes(x = max_temp, fill = month)) +
+  geom_density(alpha = 0.5, size = 1, show.legend = FALSE) +
+  facet_wrap(~ month) +
+  labs(title = "Density plots for each month in 2022",
+       x = "Maximum Temperature") +
+  theme_bw(base_size = 15) +
+  theme(axis.title.y.left = element_blank())
+```
+
+
+```{r}
+ggplot(tpa_clean, aes(x = max_temp, fill = month)) +
+  geom_density(alpha = 0.5, size = 1, show.legend = FALSE) +
+  facet_wrap(~ month) +
+  labs(title = "Density plots for each month in 2022",
+       x = "Maximum Temperature") +
+  theme_bw(base_size = 15) +
+  theme(axis.title.y.left = element_blank())
+```
+
+
 (d) Generate a plot like the chart below:
 
 
@@ -60,6 +143,28 @@ knitr::include_graphics("https://github.com/reisanar/figs/raw/master/tpa_max_tem
 ```
 
 Hint: use the`{ggridges}` package, and the `geom_density_ridges()` function paying close attention to the `quantile_lines` and `quantiles` parameters. The plot above uses the `plasma` option (color scale) for the _viridis_ palette.
+
+```{r}
+ggplot(tpa_clean2016, aes(x = max_temp, y = month, fill = stat(x))) +
+  geom_density_ridges_gradient(quantile_lines=TRUE, quantiles = 2,lwd = 1) +
+  scale_fill_viridis_c(option = "C") +
+  labs(x = "Maximum temperature (in Farhenheit degrees)") +
+  theme_bw(base_size = 15) +
+  theme(axis.title.y.left = element_blank(),
+        panel.border = element_blank(),
+        legend.title = element_blank())
+```
+
+```{r}
+ggplot(tpa_clean, aes(x = max_temp, y = month, fill = stat(x))) +
+  geom_density_ridges_gradient(quantile_lines=TRUE, quantiles = 2,lwd = 1) +
+  scale_fill_viridis_c(option = "C") +
+  labs(x = "Maximum temperature (in Farhenheit degrees)") +
+  theme_bw(base_size = 15) +
+  theme(axis.title.y.left = element_blank(),
+        panel.border = element_blank(),
+        legend.title = element_blank())
+```
 
 
 (e) Create a plot of your choice that uses the attribute for precipitation _(values of -99.9 for temperature or -99.99 for precipitation represent missing data)_.
